--- a/DFC.App.MatchSkills/Views/SelectSkills/Body.cshtml
+++ b/DFC.App.MatchSkills/Views/SelectSkills/Body.cshtml
@@ -3,21 +3,9 @@
     ViewData["Title"] = @Model.PageHeading;
 }
 
-    <div class="govuk-main-wrapper" >
+<div class="govuk-main-wrapper govuk-main-wrapper--auto-spacing">
 
-        <div class="govuk-width-container margin-reset">
 
-            <div class="govuk-phase-banner">
-                <p class="govuk-phase-banner__content">
-                    <strong class="govuk-tag govuk-phase-banner__content__tag">
-                        beta
-                    </strong>
-                    <span class="govuk-phase-banner__text">
-                        This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.
-                    </span>
-                </p>
-            </div>
-        </div>
         <form action="/matchskills/addskills/selectskills" method="post">
 
             <div class="govuk-width-container">
@@ -60,7 +48,7 @@
                             </div>
                         </div>
                         <button id="SelectSkillsButtonAddToSkillsList" class="govuk-button  govuk-button--secondary">Add to skills list</button>
-                        
+
 
                     </div>
 
