--- a/DFC.App.MatchSkills/Views/Route/Body.cshtml
+++ b/DFC.App.MatchSkills/Views/Route/Body.cshtml
@@ -7,8 +7,11 @@
         ButtonText = "Continue",
         LinkText = "TestLink",
         Text = "Choose one of the options below.",
-        FormAction = $"body/{Model.Id}",
+        FormAction = $"{Model.Id}",
         ParentModel = Model,
+        HasError = Model.HasError,
+        ErrorMessage = "Choose an option for career matching",
+        ErrorSummaryMessage = "Choose an option for career matching",
         RadioButtons = new List<RadioButtonModel>
 {
     {
