updated error message

--- a/DFC.App.MatchSkills/Views/Worked/Body.cshtml
+++ b/DFC.App.MatchSkills/Views/Worked/Body.cshtml
@@ -11,7 +11,7 @@
         ParentModel = Model,
         HasError = Model.HasError,
         ErrorMessage = "Choose whether you have worked before",
-        ErrorSummaryMessage = "You have not selected any skills",
+        ErrorSummaryMessage = "Choose whether you have worked before",
         RadioButtons = new List<RadioButtonModel>
 {
             {new RadioButtonModel {Text = "Yes", Order = 1, Name = "Choice", Value = "Yes"}},
