--- a/DFC.App.MatchSkills/Views/Route/Body.cshtml
+++ b/DFC.App.MatchSkills/Views/Route/Body.cshtml
@@ -1,4 +1,5 @@
-﻿@using DFC.App.MatchSkills.ViewComponents.Choice
+﻿@using DFC.App.MatchSkills.Models
+@using DFC.App.MatchSkills.ViewComponents.Choice
 @model DFC.App.MatchSkills.ViewModels.RouteCompositeViewModel
 
 @{
@@ -18,13 +19,17 @@
         new RadioButtonModel
         {
             Text = "Your current or previous jobs", Order = 1,
-            Name = "Choice", Value = "Jobs", HintText = "See careers that might suit your skills. This will take between 3 and 5 minutes."
+            Name = "Choice", Value = Route.Jobs.ToString(), 
+            HintText = "See careers that might suit your skills. This will take between 3 and 5 minutes.",
+            Checked = Model.RouteIncludesDysac.HasValue && !Model.RouteIncludesDysac.Value
         }
     },
             {new RadioButtonModel
             {
                 Text = "Your interests, motivations and current or previous jobs", Order = 2, Name = "Choice",
-                Value = "SkillsAndJobs", HintText = "See careers that might suit your personal traits and skills. This will take between 5 and 10 minutes."
+                Value = Route.JobsAndSkills.ToString(), 
+                HintText = "See careers that might suit your personal traits and skills. This will take between 5 and 10 minutes.",
+                Checked = Model.RouteIncludesDysac.HasValue && Model.RouteIncludesDysac.Value
             }}
 
         }
