--- a/DFC.App.MatchSkills/Views/SelectSkills/Body.cshtml
+++ b/DFC.App.MatchSkills/Views/SelectSkills/Body.cshtml
@@ -1,4 +1,5 @@
-﻿@model DFC.App.MatchSkills.ViewModels.SelectSkillsCompositeViewModel
+﻿@using DFC.App.MatchSkills.ViewComponents.SkillsList
+@model DFC.App.MatchSkills.ViewModels.SelectSkillsCompositeViewModel
 
 
         <div class="govuk-main-wrapper govuk-main-wrapper--auto-spacing">
@@ -29,11 +30,13 @@
                                         {
                                             <govukLabel id="@Model.GetElementId("GovukCheckbox","NoRequiredSkillsFound")" Text="No required skills found"></govukLabel>
                                         }
-
-                                        @foreach (var skill in Model.Skills)
+                                        else
                                         {
-                                            <govukCheckbox id="@Model.GetElementId("GovukCheckbox-",@skill.Id)" label="@skill.Name" name="@skill.Id--@skill.Name"  AdditionalClass="checkbox-container-item"></govukCheckbox>
+                                            var slm = new SkillsListViewModel(Model.Id.Value, SkillsListViewModel.ListItemType.Checkbox);
+                                            slm.Skills.LoadFrom(Model.Skills);
+                                            @await Component.InvokeAsync("SkillsList",slm);
                                         }
+
                                     </div>
                                 </fieldset>
                             </div>
