Trying to stop SonarCloud fussing over list item html validation

--- a/DFC.App.MatchSkills/ViewComponents/SkillsList/Default.cshtml
+++ b/DFC.App.MatchSkills/ViewComponents/SkillsList/Default.cshtml
@@ -31,7 +31,7 @@ else
                 break;
 
             default:
-                <li>@item.Name</li>
+                <govukListItem text="@item.Name"></govukListItem>
                 break;
         }
     }
