--- a/DFC.App.MatchSkills/ViewComponents/SkillsList/Default.cshtml
+++ b/DFC.App.MatchSkills/ViewComponents/SkillsList/Default.cshtml
@@ -31,7 +31,7 @@ else
                 break;
 
             default:
-                <govukListItem text="@item.Name"></govukListItem>
+                <li>@item.Name</li>
                 break;
         }
     }
