--- a/DFC.App.MatchSkills/Views/EnterSkills/Body.cshtml
+++ b/DFC.App.MatchSkills/Views/EnterSkills/Body.cshtml
@@ -4,8 +4,8 @@
 
 @{ 
 
-        var textInputElementName = @Model.GetElementId("input", "EnterSkillsInput");
-        var formElementName = Model.GetElementId("form", "EnterSkillsSearch");
+        var textInputElementName = @Model.GetElementId("input", "Input");
+        var formElementName = Model.GetElementId("form", "Form");
         var textInputError = Model.GetElementId("govukTextInputError", "SearchError");
         var searchButton = Model.GetElementId("govukSecondaryButton", "Search");
         var skillSearchGroup = "skillSearchGroup";
@@ -18,7 +18,7 @@
 <div class="govuk-main-wrapper govuk-main-wrapper--auto-spacing">
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
-            <form id="@formElementName" action="@CompositeViewModel.PageId.SelectSkills" method="post" class="@(Model.HasError ? "govuk-form-group--error": "")">
+            <form id="@formElementName" action="/matchskills/relatedskills/getRelatedSkills" method="post" class="@(Model.HasError ? "govuk-form-group--error": "")">
                 <govukHeadingH1 Text="Search for a skill" />
 
                 <p>Enter the name of the skills that you would like to match to careers. For example: ‘public speaking’.</p>
@@ -36,7 +36,7 @@
                 
                     <govukTextInput id="@textInputElementName" additional-class="govuk-input--width-20">
                         <govukHint HintText="You can search for a specific skill (like measuring spirit level) or a skill group (like bricklaying)"></govukHint>
-                        <govukError Id="@textInputError" Text="Enter a Skill" hidden="@(!Model.HasError)"></govukError>
+                        <govukError Id="@textInputError" Text="Enter a skill" hidden="@(!Model.HasError)"></govukError>
                     </govukTextInput>
                     <govukSecondaryButton id="@searchButton" text="Search"></govukSecondaryButton>
                 </div>
